build_error_2.log
    Checking nasa-wallpaper v2.2.0 (C:\Users\maule\Desktop\repo\nasa-wallpaper)
warning: unused imports: `DynamicImage` and `RgbaImage`
 --> src\text_renderer.rs:1:13
  |
1 | use image::{DynamicImage, Rgba, RgbaImage, GenericImageView};
  |             ^^^^^^^^^^^^        ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: arguments to this function are incorrect
  --> src\text_renderer.rs:59:5
   |
59 |     draw_text_mut(
   |     ^^^^^^^^^^^^^
...
64 |         scale,
   |         ----- expected `Scale`, found `PxScale`
65 |         &font,
   |         ----- expected `&Font<'_>`, found `&FontRef<'_>`
   |
   = note: expected reference `&rusttype::font::Font<'_>`
              found reference `&FontRef<'_>`
note: function defined here
  --> C:\Users\maule\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\imageproc-0.23.0\src\drawing\text.rs:45:8
   |
45 | pub fn draw_text_mut<'a, C>(
   |        ^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> src\text_renderer.rs:71:5
   |
71 |     draw_text_mut(
   |     ^^^^^^^^^^^^^
...
76 |         scale, // slightly smaller?
   |         ----- expected `Scale`, found `PxScale`
77 |         &font,
   |         ----- expected `&Font<'_>`, found `&FontRef<'_>`
   |
   = note: expected reference `&rusttype::font::Font<'_>`
              found reference `&FontRef<'_>`
note: function defined here
  --> C:\Users\maule\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\imageproc-0.23.0\src\drawing\text.rs:45:8
   |
45 | pub fn draw_text_mut<'a, C>(
   |        ^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0308`.
warning: `nasa-wallpaper` (bin "nasa-wallpaper") generated 1 warning
error: could not compile `nasa-wallpaper` (bin "nasa-wallpaper") due to 2 previous errors; 1 warning emitted
